<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/paired_devices"
        android:textSize="20sp"/>

    <ListView
        android:id="@+id/listPairedDevices"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:divider="@null"
        android:dividerHeight="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/discovered_devices"
        android:textSize="20sp"/>

    <ListView
        android:id="@+id/listDiscoveredDevices"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/scan_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/scan_devices"
        android:background = "@drawable/roundedbutton"/>
</LinearLayout>
